(EXPERIMENTAL) Update config system
Another day, Another experimental update that breaks everything for everyone all at once.
If you're reading this (First of all thank you) the fix is to update the names in config.conf (Just copy a new config from /usr/share/sys64/hud/config.conf)

Oh uh yeah, Sorry for the breakage!

--- a/config.conf
+++ b/config.conf
@@ -3,11 +3,11 @@ position=bottom
 orientation=h
 width=300
 height=50
-icon_size=26
-percentage=true
+icon-size=26
+show-percentage=true
 margins=0 0 0 0
 timeout=3
-transition=250
-backlight=
+transition-time=250
+backlight-path=
 monitors=audio_in,audio_out,brightness
-keyboard=
+keyboard-path=
