--- a/config.conf
+++ b/config.conf
@@ -6,8 +6,7 @@ height=50
 icon-size=26
 show-percentage=true
 margins=0 0 0 10
-timeout=3
-transition-time=250
+timeout=3000
 backlight-path=
-monitors=audio_in,audio_out,brightness
+listeners=speakers,microphone,backlight,keyboard
 keyboard-path=
