--- a/config.conf
+++ b/config.conf
@@ -8,6 +8,6 @@ show-percentage=true
 margins=0 0 0 0
 timeout=3
 transition-time=250
+listeners=audio_in,audio_out,backlight
 backlight-path=
-monitors=audio_in,audio_out,brightness
 keyboard-path=
